--- a/cra-threejs/src/App.css
+++ b/cra-threejs/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  text-align: start;
+  max-width: 100vw;
 }
 
 .App-header {
@@ -11,6 +12,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.home {
+  padding: 20rem 10rem 10rem 10rem;
+  align-items: start;
 }
 
 /* Scroll Bar */
@@ -106,9 +112,8 @@ body {
 /* Home section */
 
 .home {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  background-image: url(https://images.unsplash.com/photo-1498550744921-75f79806b8a7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b0f6908fa5e81286213c7211276e6b3d&auto=format&fit=crop&w=1500&q=80);
   background-position: center top;
   background-size: cover;
 }
@@ -143,7 +148,7 @@ body {
   }
 
   .nav div.main_list {
-    width: 100%;
+    width: 100vw;
     height: 0;
     overflow: hidden;
   }
@@ -155,7 +160,7 @@ body {
 
   .nav div.main_list ul {
     flex-direction: column;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     right: 0;
     left: 0;
@@ -166,13 +171,13 @@ body {
   }
 
   .nav div.main_list ul li {
-    width: 100%;
+    width: 100vw;
     text-align: right;
   }
 
   .nav div.main_list ul li a {
     text-align: center;
-    width: 100%;
+    width: 100vw;
     font-size: 3rem;
     padding: 20px;
   }
