--- a/cra-threejs/src/components/home/navbar.css
+++ b/cra-threejs/src/components/home/navbar.css
@@ -2,17 +2,19 @@
 
 :root {
     --accent-text-color: #ffb5b5;
+    --background-color: #1e222f;
 }
 
 html,
 body {
+    max-width: 100vw;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Quicksand", sans-serif;
     font-size: 62.5%;
     font-size: 10px;
-    background-color: #1e222f;
+    background-color: var(--background-color);
 }
 
 /* Navbar section */
@@ -103,5 +105,5 @@ body {
 .affix {
     padding: 0;
     margin: 0;
-    background-color: #1e222f;
+    background-color: var(--background-color);
 }
