--- a/cra-threejs/src/components/home/navbar.css
+++ b/cra-threejs/src/components/home/navbar.css
@@ -91,14 +91,14 @@ body {
     padding-right: 3rem;
 }
 
-.nav div.main_list ul li a {
+.nav div.main_list ul li NavLink {
     text-decoration: none;
     color: #fff;
     line-height: 65px;
     font-size: 2.4rem;
 }
 
-.nav div.main_list ul li a:hover {
+.nav div.main_list ul li NavLink:hover {
     color: var(--accent-text-color);
 }
 
