--- a/cra-threejs/src/components/projects/ProjectItem.css
+++ b/cra-threejs/src/components/projects/ProjectItem.css
@@ -2,4 +2,66 @@
     border: 1px black solid;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+}
+
+.project-item-header-main {
+    display: flex;
+}
+
+.project-item-header-img {
+    width: 50px;
+    height: 50px;
+}
+
+/* BUTTON ANIMATION */
+button {
+    color: #ecf0f1;
+    background: #e74c3c;
+    width: 70px;
+    height: 70px;
+    position: relative;
+    font-size: 50px;
+    cursor: pointer;
+    border: 0;
+    outline: 0;
+    padding: 0
+}
+
+.plus,
+.minus {
+    color: #fff;
+    padding: 10px;
+    width: 70px;
+    height: 70px;
+    line-height: 50px;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    box-sizing: border-box;
+    transition: .5s all ease-out;
+}
+
+.plus {
+    opacity: 1;
+    transform: rotate(0deg);
+}
+
+button.active .plus {
+    opacity: 0;
+    transform: rotate(90deg);
+}
+
+.minus {
+    opacity: 0;
+    transform: rotate(-90deg);
+}
+
+button.active .minus {
+    opacity: 1;
+    transform: rotate(0deg);
 }
