--- a/cra-threejs/src/App.css
+++ b/cra-threejs/src/App.css
@@ -1,10 +1,15 @@
+:root {
+  --accent-text-color: #320606;
+  --background-color: #c6b3b3;
+}
+
 .App {
   text-align: start;
   max-width: 100vw;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: var(--background-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
