--- a/cra-threejs/src/components/about/about.css
+++ b/cra-threejs/src/components/about/about.css
@@ -1,6 +1,34 @@
+:root {
+    --primary-color: #732b3d;
+    --text-color: #320606;
+    --background-color: #c6b3b3;
+    --accent-color: #c5808a;
+    --secondary-color: #976572;
+    --shadow-color: #744551de;
+}
+
+@keyframes circle-in-hesitate {
+    0% {
+        clip-path: circle(0%);
+    }
+
+    40% {
+        clip-path: circle(40%);
+    }
+
+    100% {
+        clip-path: circle(125%);
+    }  
+}
+
+[transition-style="in:circle:hesitate"] {
+    animation: 2.5s circle-in-hesitate ;
+}
+
+
 .about {
     padding: 20rem 10rem 10rem 10rem;
-    align-items: start;
+    align-items: flex-start;
     height: 100vh;
     background-position: center top;
     background-size: cover;
@@ -10,8 +38,14 @@
 
 .avatar-holder {
     border-radius: 300px;
-    background: #1e222f;
-    box-shadow: 18px 18px 35px #13151e,
-        -18px -18px 35px #292f40;
+    background: var(--primary-color);
+    box-shadow: 18px 18px 35px var(--shadow-color),
+        -18px -18px 35px var(--shadow-color);
     margin-right:5rem;
+}
+
+.introduction {
+    font-size: 8rem;
+    color: var(--text-color);
+    font-family: "poppins";
 }
